# leave_recorder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  azure-containerapp.yaml  docker-compose.yml  manage.py  project_description.md  pyproject.toml  requirements-prod.txt  requirements.txt  review_fixes_plan.md  telemetry-id
.github/workflows/: ci.yml  deploy.yml
apps/api/: authentication.py  csrf.py  exceptions.py  models.py  serializers.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_initial.py
apps/core/: views.py
apps/leave/: forms.py  models.py  urls.py  views.py
apps/leave/templatetags/: __init__.py  (+1 more)
apps/organisations/: apps.py  consumers.py  forms.py  models.py  routing.py  signals.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/utils/: dates.py
config/: asgi.py  urls.py
config/settings/: prod.py  test.py
docs/: backup.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
frontend/public/: _redirects
frontend/src/: App.jsx  index.css
scripts/: docker-run.sh  docker-test.sh  dupcheck.sh  lint.sh  run.sh  setup.sh  test-with-redis.sh  test.sh
static/css/: base.css
supabase/: README.md  schema.sql
templates/: base.html
templates/account/: login.html  preferences.html  register.html
templates/leave/: month.html
templates/organisation/: detail.html  form.html  list.html
tests/: conftest.py  test_api.py  test_integration.py  test_leave.py  test_leave_edge_cases.py  test_organisations.py  test_signals.py  test_websocket.py
(+20 files in other folders)
